finding the execution order of dependencies is not what we want

--- a/src/backgrounds.css
+++ b/src/backgrounds.css
@@ -1,7 +1,5 @@
 .lightBlueBackground {
+  extends: whiteBorder from "./a.css";
   background: #0074D9;
 }
 
-.fontSize24pt {
-  font-size: 1.5rem;
-}
