--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
   background: #001f3f;
+  display: flex;
 }
 
 .lol {
-  extends: lightBlueBackground fontSize24pt from "./backgrounds.css";
+  extends: lightBlueBackground from "./backgrounds.css";
+  extends: fontSize24pt from "./b.css";
   color: white;
   padding: 2rem;
 }
