--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@ body {
   display: flex;
 }
 
-.lol {
+:local(.lol) {
   composes: lightBlueBackground from "./backgrounds.css";
   composes: fontSize24pt from "./b.css";
   color: white;
