values are working well but live-reload isnt

--- a/src/backgrounds.css
+++ b/src/backgrounds.css
@@ -1,5 +1,6 @@
+@value light-blue #0074D9;
+
 .lightBlueBackground {
   composes: whiteBorder from "./a.css";
-  background: #0074D9;
+  background: light-blue;
 }
-
